-Partial implementation of fullyVaccinated boolean - Partial fix of sync
